<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.hisp.dhis</groupId>
    <artifactId>dhis-live</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>DHIS Live</name>

    <url>http://maven.apache.org</url>

    <build>
        <finalName>dhis2-live</finalName>
        <defaultGoal>install</defaultGoal>

        <plugins>
			
            <!--JAXB plugin-->
            <plugin>
                <groupId>org.jvnet.jaxb2.maven2</groupId>
                <artifactId>maven-jaxb2-plugin</artifactId>
                <executions>
                    <execution>
                        <configuration>
                            <generatePackage>org.hisp.dhis.config</generatePackage>
                        </configuration>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Maven Assembly -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.2-beta-3</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>org.hisp.dhis.TrayApp</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- append to the packaging phase. -->
                        <goals>
                            <goal>single</goal> <!-- goals == mojos -->
                        </goals>
                    </execution>
                </executions>
            </plugin>
			
            <!-- Maven Compiler -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.0.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
			
            <!-- Launch4J -->
            <plugin>
                <groupId>org.bluestemsoftware.open.maven.plugin</groupId>
                <artifactId>launch4j-plugin</artifactId>
                <version>1.5.0.0</version>
                <executions>
                    <execution>
                        <id>default</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <dontWrapJar>true</dontWrapJar>
                            <headerType>gui</headerType>
                            <outfile>${project.build.directory}/dhis2-live.exe</outfile>
                            <jar>dhis2-live.jar</jar>
                            <errTitle>dhis2</errTitle>
                            <priority>normal</priority>
                            <downloadUrl>http://java.com/download</downloadUrl>
                            <supportUrl>http://dhis2.org</supportUrl>
                            <customProcName>false</customProcName>
                            <initialHeapSize>512MB</initialHeapSize>
                            <maxHeapSize>1024MB</maxHeapSize>
                            <stayAlive>false</stayAlive>
                            <manifest></manifest>
                            <icon>${basedir}/util/launch4j/favicon.ico</icon>
                            <singleInstance
                                mutexName="dhis-live"
                                windowTitle="DHIS2"
                            />
                            <jre>
                                <minVersion>1.6.0_14</minVersion>
                                <opts>
                                    <opt>-XX:MaxPermSize=256M</opt>
                                </opts>
                            </jre>
                            <splash>
                                <file>${basedir}/util/launch4j/dhis2-splash.bmp</file>
                                <waitForWindow>false</waitForWindow>
                                <timeout>12</timeout>
                                <timeoutErr>false</timeoutErr>
                            </splash>
                        </configuration>
                    </execution>
					<execution>
                        <id>embedded</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <dontWrapJar>true</dontWrapJar>
                            <headerType>gui</headerType>
                            <outfile>${project.build.directory}/dhis2-live-embedded.exe</outfile>
                            <jar>dhis2-live.jar</jar>
                            <errTitle>dhis2</errTitle>
                            <priority>normal</priority>
                            <downloadUrl>http://java.com/download</downloadUrl>
                            <supportUrl>http://dhis2.org</supportUrl>
                            <customProcName>false</customProcName>
                            <initialHeapSize>512MB</initialHeapSize>
                            <maxHeapSize>1024MB</maxHeapSize>
                            <stayAlive>false</stayAlive>
                            <manifest></manifest>
                            <icon>${basedir}/util/launch4j/favicon.ico</icon>
                            <singleInstance
                                mutexName="dhis-live"
                                windowTitle="DHIS2"
                            />
                            <jre>
								<path>jre6</path>
                                <minVersion>1.6.0_14</minVersion>
                                <opts>
                                    <opt>-XX:MaxPermSize=256M</opt>
                                </opts>
                            </jre>
                            <splash>
                                <file>${basedir}/util/launch4j/dhis2-splash.bmp</file>
                                <waitForWindow>false</waitForWindow>
                                <timeout>12</timeout>
                                <timeoutErr>false</timeoutErr>
                            </splash>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <url>http://download.java.net/maven/2</url>
            <id>beans-binding</id>
            <layout>default</layout>
            <name>Repository for library Library[beans-binding]</name>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jetty</artifactId>
            <version>6.1.15</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jsp-2.1</artifactId>
            <version>6.1.14</version>
        </dependency>
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jetty-util</artifactId>
            <version>6.1.15</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>jetty</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5-6.0.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.1</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>avalon-framework</groupId>
                    <artifactId>avalon-framework</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>logkit</groupId>
                    <artifactId>logkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <version>2.1.13</version>
        </dependency>
        <dependency>
            <groupId>org.jdesktop</groupId>
            <artifactId>beansbinding</artifactId>
            <version>1.2.1</version>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>

